# workmate-test

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/reporter/: __main__.py  cli.py
src/reporter/chain/: reader.py
src/reporter/chain/repository/: base.py  csv_repository.py
src/reporter/report/: __init__.py  base.py  coffee_median.py
tests/: conftest.py  test_cli.py
tests/chain/: test_reader.py
tests/chain/repository/: test_csv_repository.py
tests/report/: test_coffee_median.py
