[project]
name = "reporter"
version = "0.1.0"
description = "Скрипт для написания отчётов "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-cov>=7.0.0",
    "tabulate>=0.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reporter"]

[tool.hatch.build.targets.wheel.shared-data]
"src/reporter/py.typed" = "reporter/py.typed"
