[project]
name = "reporter"
version = "0.1.0"
description = "Скрипт для написания отчётов "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tabulate>=0.10.0",
]

[project.scripts]
reporter = "reporter.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reporter"]

[tool.hatch.build.targets.wheel.shared-data]
"src/reporter/py.typed" = "reporter/py.typed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
